# prompt

./: .gitignore  LICENSE  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup_direnv.sh
src/prompt/: 01_guidelines.ipynb  02_iterative_dev.ipynb  03_summarizing.ipynb  04_inferring.ipynb  08_images.ipynb  09_audio.ipynb
